feat: add openapi tags
